--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,13 +8,17 @@ on:
 jobs:
   build-docs:
     runs-on: ubuntu-latest
-
     container:
-      image: ghcr.io/utex-scientific/iwh5/docs:latest
-
+      image: python:3.11-bookworm
+  
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Install reqs
+        run: |
+          pip install -r requirements.txt
+          playwright install --with-deps chromium
 
       - name: Start MkDocs Server
         run: |
