--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,36 +1,50 @@
-name: Build Docs and Export PDF
+name: Deploy MkDocs to GitHub Pages
 
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  build-docs:
+  build-and-deploy:
     runs-on: ubuntu-latest
     container:
       image: python:3.11-bookworm
-  
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install reqs
+      - name: Install dependencies
         run: |
           pip install -r requirements.txt
           playwright install --with-deps chromium
 
-      - name: Start MkDocs Server
-        run: |
-          mkdocs build --site-dir public
-          mkdocs serve -a 0.0.0.0:8000 &
-          sleep 7
+      - name: Build site
+        run: mkdocs build --site-dir site
 
-      - name: Generate PDF
-        run: python3 print_pdf.py
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: public
-          path: public
+          path: site
+
+  deploy:
+    needs: build-and-deploy
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
