--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: InspectionWare File Formats
+site_name: InspectionWare File Format IWH5
 site_url: https://iwh5-3805dd.gitlab.io/
 site_dir: public
 copyright: Copyright &copy; 2025 UTEX Scientific Instruments Inc.
@@ -118,9 +118,5 @@ nav:
       - Gate: IWH5/setup-JSON/Gate.md
       - Scan: IWH5/setup-JSON/Scan.md
       - Encoder: IWH5/setup-JSON/Encoder.md
-  - SDT: 
-    - SDT Structure: SDT/sdt_index.md
-    - Code Samples: SDT/sample-code.md
-    - Sample Data Files: SDT/sample-data-files.md
 
 
