--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: InspectionWare File Format IWH5
+site_name: InspectionWare File Format - IWH5
 site_url: https://iwh5-3805dd.gitlab.io/
 site_dir: public
 copyright: Copyright &copy; 2025 UTEX Scientific Instruments Inc.
@@ -97,19 +97,14 @@ extra:
   generator: false
 
 nav:
-  - 'Overview': index.md
-  - IWH5: 
-    - Overview: IWH5/iwh5_index.md 
+  - IWH5:
+    - Home: IWH5/iwh5_index.md 
     - Resources: IWH5/getting-started/Resources.md
     - Downloads: IWH5/getting-started/Downloads.md
-    - Data File Samples:
-      - UT iwh5 Structure: IWH5/samples/UT_Structure.md
-      - ET iwh5 Structure: IWH5/samples/ET_Structure.md  
-    - Data Structure: 
-      - Schema: IWH5/data-structure/Schema.md
-      - Examples: IWH5/data-structure/Examples.md
+    - Data File Samples: IWH5/samples/Structures.md
+    - Data Structure: IWH5/data-structure/Schema.md
     - Setup JSON Documentation:
-      - Example: IWH5/setup-JSON/Examples.md
+      - Samples: IWH5/setup-JSON/Samples.md
       - Instrument: IWH5/setup-JSON/Instrument.md
       - Channel: IWH5/setup-JSON/Channel.md
       - Probe Config: IWH5/setup-JSON/Probe_Config.md
