docs table formatted

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,6 @@ nav:
     - TVG: IWH5/setup-JSON/TVG.md
     - Gate: IWH5/setup-JSON/Gate.md
     - Scan: IWH5/setup-JSON/Scan.md
-    - Encoder: IWH5/setup-JSON/Encoder.md
+    - Micropulse Device Encoder: IWH5/setup-JSON/Encoder.md
 
 
